# pyospackage-tirthjoshi

./: README.md  pyproject.toml
src/pyospackage_tirthjoshi/: __init__.py  example.py
tests/: test_example.py
